--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,7 @@ before_script:
 # Commande pour exécuter les tests
 script:
   - pytest
+
+# Commande pour envoyer les résultats de couverture de code à coveralls.io
+after_success:
+  coveralls
